       the child is the only gadget in the list.
     - Gadgets now check recursive isEnabled() function instead of using the
       enabled flag directly.
     - Removed WiFi icon due to problems with some loaders.
     - Moved ROM icon to icons directory to reduce ROM size.
     - Removed vector from woopsiheaders.h.
     - Gadget constructor respects GADGET_PERMEABLE flag.

  - New Features:
     - Added PackedFontBase, PackedFont1 and PackedFont16 classes (proportional
       font support).
     - Added "pythonscripts" folder with Jeff's "bmp2font" Python script for
       creating PackedFont-compatible fonts.
     - Renamed existing show/hide system to shelve/unshelve and added true
       show/hide system.
     - Added Gadget::isEnabled().
     - Added ListBox and ListBoxItem classes.
     - Added double click events (optional per gadget via a flag).
     

  V0.31 (20080411)
  
  - Fixes:
     - Started inlining methods that can be inlined.
     - Made destructors protected to prevent creation of gadgets on the stack.
     - More const-correctness.
     - Gadget destructor deletes children using destroy() method instead of
       calling delete.
     - Textbox::resize() remembers correct value of visible flag.
     - Gadget::show() invalidates the rect cache correctly.
     - Refactored active/inactive/focused/blurred system:
        - Renamed Gadget "active" flag to "hasFocus".
        - Renamed Gadget "setActiveGadget" to "setFocusedGadget".
        - Renamed Gadget "_activeGadget" to "_focusedGadget".
        - Refactored Gadget "setActive()" into "focus()" and "blur()" methods.
     - Refactored visible/invisible system:
        - Renamed Gadget "visible" flag to "drawingEnabled".
        - Removed Gadget::setVisible().
        - Removed Gadget::isVisible().
        - Added Gadget::enableDrawing().
        - Added Gadget::disableDrawing().
        - Added Gadget::drawingEnabled().